--- a/html/landing.html
+++ b/html/landing.html
@@ -46,9 +46,10 @@
     
 </head>
 
-<body id="page-name">
+<body id="page-name" style="padding-top:0;">
 
 <div id="container-fluid">
+
 
 <!--header start -->
 <div id="header-wrap">
@@ -88,6 +89,7 @@
     </div>
 </div>
 
+<div class="wrapper-bot">
 
 <div class="tags-wrap mt-30">
 	<a href="#" class="more-tag">more tagspots</a>
@@ -127,6 +129,8 @@
     </div>
 </div>
 <!--footer end -->
+
+</div>
 
 </div><!--container-fluid -->
 
