--- a/html/landing.html
+++ b/html/landing.html
@@ -44,24 +44,27 @@
 
 
 <!--header start -->
-<div id="header-wrap">
-	<div class="content-width">
-        <header id="header" class="clearfix">
-            <div id="logo">
-            	<a href="#"><img src="images/logo.png" alt=""></a>
-            </div>
-            <div id="nav">
-            	<ul class="clearfix">
-                	<ul>
-                    	<li><a href="#">Tour</a></li>
+	<div id="header-wrap">
+        <div class="content-width">
+            <header id="header" class="clearfix">
+                <div id="logo">
+                    <a href="#"><img src="images/logo.png" alt=""></a>
+                </div>
+                <div id="nav">
+                	<a href="#" id="menu">
+                    	<span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
+                    <ul class="clearfix">
+                        <li><a href="#">Tour</a></li>
                         <li><a href="#popup-galelry" class="popup-link">Latest Hashtags</a></li>
                         <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
                     </ul>
-                </ul>
-            </div>
-        </header>
+                </div>
+            </header>
+        </div>
     </div>
-</div>
 <!--header end -->
 
 
@@ -127,7 +130,7 @@
 
 <div class="overlay-popup"></div>
 <div class="popup-seciton" id="popup-login">
-	<div class="popup-title">Log-in ! <a href="#" class="login-cancel">x</a></div>
+	<div class="popup-title">Log-in !</div>
     <div class="popup-body">
     	<div class="social-section">
         	<p><a href="#"><img src="images/social-1.png" alt=""></a></p>
@@ -164,23 +167,23 @@
 
 
 <div class="popup-seciton" id="popup-galelry">
-	<div class="popup-title">Choose your Avatar <a href="#" class="login-cancel">x</a></div>
+	<div class="popup-title">Choose your Avatar</div>
     <div class="popup-body">
     	
         <div class="avater-gallery">
         	<ul class="clearfix">
-            	<li><a href="#"><img src="images/tagee_male1.jpg" alt=""></a></li>
+            	<li><a href="#"><img src="images/tagee_woman2b.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/tagee_woman2.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/tagee_male1.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/tagee_woman2.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/tagee_male1.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/tagee_woman2.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/tagee_male1.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/tagee_male2.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/tagee_male3.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/tagee_alien.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/tagee_woman3.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/upload.png" alt=""></a></li>
             </ul>
         </div>
         <div class="avater-btn">
-        	<a href="#"><img src="images/cancel.png" alt=""></a>
+        	<a href="#" class="login-cancel"><img src="images/cancel.png" alt=""></a>
             <a href="#"><img src="images/ok.png" alt=""></a>
         </div>
         
