font and new changes on something.html

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -486,8 +486,10 @@
 	<div class="popup-title">Log-in !</div>
     <div class="popup-body">
     	<div class="social-section">
-        	<p><a href="#"><img src="images/social-1.png" alt=""></a></p>
-            <p><a href="#"><img src="images/social-2.png" alt=""></a></p>
+        	<p>
+            	<a href="#" class="facebook">Facebook</a>
+            </p>
+            <p><a href="#" class="twitter">Twitter</a></p>
             <p><a href="#"><img src="images/social-3.png" alt=""></a></p>
         </div>
         <div class="avater-wrap clearfix">
@@ -536,8 +538,8 @@
             </ul>
         </div>
         <div class="avater-btn">
-        	<a href="#" class="login-cancel"><img src="images/cancel.png" alt=""></a>
-            <a href="#"><img src="images/ok.png" alt=""></a>
+        	<a href="#" class="login-cancel cancel">Cancel</a>
+            <a href="#" class="login-cancel ok">OK !</a>
         </div>
         
     </div>
