--- a/html/something.html
+++ b/html/something.html
@@ -112,14 +112,38 @@
                         </div>
                         <div class="article-gallery">
                         	<ul class="clearfix">
-                            	<li><span class="square square-1"></span></li>
-                                <li><span class="square square-2"></span></li>
-                                <li><span class="square square-3"></span></li>
-                                <li><span class="square square-4"></span></li>
-                                <li><span class="square square-5"></span></li>
-                                <li><span class="square square-6"></span></li>
-                                <li><span class="square square-7"></span></li>
-                                <li><span class="square square-8"></span></li>
+                            	<li>
+                                	<img src="images/channel_01.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
+                                <li>
+                                	<img src="images/channel_02.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
+                                <li>
+                                	<img src="images/channel_03.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
+                                <li>
+                                	<img src="images/channel_04.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
+                                <li>
+                                	<img src="images/channel_05.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
+                                <li>
+                                	<img src="images/channel_06.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
+                                <li>
+                                	<img src="images/channel_07.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
+                                <li>
+                                	<img src="images/channel_08.png" alt="">
+                                    <input type="text" placeholder="#channel" class="field-channel">
+                                </li>
                             </ul>
                         </div>
                         <div class="join-art">
@@ -330,13 +354,16 @@
 
 </div><!--container-fluid -->
 
+
 <div class="overlay-popup"></div>
 <div class="popup-seciton" id="popup-login">
 	<div class="popup-title">Log-in !</div>
     <div class="popup-body">
     	<div class="social-section">
-        	<p><a href="#"><img src="images/social-1.png" alt=""></a></p>
-            <p><a href="#"><img src="images/social-2.png" alt=""></a></p>
+        	<p>
+            	<a href="#" class="facebook">Facebook</a>
+            </p>
+            <p><a href="#" class="twitter">Twitter</a></p>
             <p><a href="#"><img src="images/social-3.png" alt=""></a></p>
         </div>
         <div class="avater-wrap clearfix">
@@ -385,8 +412,8 @@
             </ul>
         </div>
         <div class="avater-btn">
-        	<a href="#" class="login-cancel"><img src="images/cancel.png" alt=""></a>
-            <a href="#"><img src="images/ok.png" alt=""></a>
+        	<a href="#" class="login-cancel cancel">Cancel</a>
+            <a href="#" class="login-cancel ok">OK !</a>
         </div>
         
     </div>
