--- a/html/something.html
+++ b/html/something.html
@@ -106,7 +106,7 @@
                     	<div class="something-title">
                     		<h2 class="center">#something</h2>
                         </div>
-                        <div class="in-sm">
+                        <div class="in-sm center">
                         	<span class="block">Choose a CHANNEL that fits the hashtag. </span>
                             Help other TAGEEs find out what you like.
                         </div>
@@ -114,35 +114,35 @@
                         	<ul class="clearfix">
                             	<li>
                                 	<img src="images/channel_01.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_02.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_03.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_04.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_05.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_06.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_07.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_08.png" alt="">
-                                    <input type="text" placeholder="#channel" class="field-channel">
+                                    <span class="channel-lable">#channel</span>
                                 </li>
                             </ul>
                         </div>
