--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
                     </a>
                     <ul class="clearfix">
                         <li><a href="#">Tour</a></li>
-                        <li><a href="#popup-galelry" class="popup-link">Latest Hashtags</a></li>
+                        <li><a href="#popup-galelry" class="popup-link">Top TagsSpots</a></li>
                         <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
                     </ul>
                 </div>
@@ -175,7 +175,7 @@
                         <a href="#">CHANNEL ICON</a>
                     </div>
                     <div class="sidebar-bot">
-                    	<input type="text" value="" class="field-comment">
+                    	<input type="text" placeholder="#hashtag" class="field-comment">
                     </div>
                 </div><!--sidebar -->
                 
@@ -203,7 +203,10 @@
                                     <img src="images/img-1.jpg" alt="" class="frame-img" id="large_photo">
                                     <div class="comment-frmae"><img src="images/comment.png" alt=""> <span>6</span></div>
                                     <span class="frame-tag">#hashtag</span>
-                                    <img class="arrow" src="images/arrow-right.png" alt="">
+                                    <div class="arrow-wrap">
+                                    	<img class="arrow-right" src="images/arrow-right.png" alt="">
+                                        <img class="arrow-up" src="images/arrow-up.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -413,7 +416,10 @@
 
 <div class="overlay-popup"></div>
 <div class="popup-seciton" id="popup-login">
-	<div class="popup-title">Log-in !</div>
+	<div class="popup-title">
+    	Log-in !
+        <a href="#" class="login-cancel cancel-logo"><img src="images/close.png" alt=""></a>
+    </div>
     <div class="popup-body">
     	<div class="social-section">
         	<p>
@@ -435,13 +441,20 @@
             <div class="form-right">
             	<div class="form-contain">
                 	<img src="images/icon-1.png" alt="" class="field-icon">
-                	<input type="text" value="" class="field-form">
+                	<input type="text" placeholder="Mike" class="field-form">
                 </div>
                 <div class="form-contain">
                 	<img src="images/icon-2.png" alt="" class="field-icon">
-                	<input type="password" value="" class="field-form field-password">
+                	<input type="password" placeholder="password" class="field-form field-password">
                 </div>
-                <br>
+                <div class="form-contain">
+                	<img src="images/icon-5.png" alt="" class="field-icon">
+                	<input type="text" placeholder="Mike@gmail.com" class="field-form">
+                </div>
+                <div class="form-contain">
+                	<img src="images/icon-4.png" alt="" class="field-icon">
+                	<input type="password" placeholder="03/06/98" class="field-form">
+                </div>
                 <div class="form-contain center">
                 	<input type="submit" value="Sign-up" class="signup">
                 </div>
