--- a/html/tour.html
+++ b/html/tour.html
@@ -89,7 +89,7 @@
                     <ul class="clearfix">
                         <ul>
                             <li><a href="#">Tour</a></li>
-                            <li><a href="#popup-galelry" class="popup-link">Latest Hashtags</a></li>
+                            <li><a href="#popup-galelry" class="popup-link">Top TagsSpots</a></li>
                             <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
                         </ul>
                     </ul>
@@ -434,11 +434,12 @@
 </div><!--wrapper-bot -->
 
 
-
 <div class="overlay-popup" style="display:block;"></div>
-
 <div class="popup-seciton" id="popup-login">
-	<div class="popup-title">Log-in !</div>
+	<div class="popup-title">
+    	Log-in !
+        <a href="#" class="login-cancel cancel-logo"><img src="images/close.png" alt=""></a>
+    </div>
     <div class="popup-body">
     	<div class="social-section">
         	<p>
@@ -460,13 +461,20 @@
             <div class="form-right">
             	<div class="form-contain">
                 	<img src="images/icon-1.png" alt="" class="field-icon">
-                	<input type="text" value="" class="field-form">
+                	<input type="text" placeholder="Mike" class="field-form">
                 </div>
                 <div class="form-contain">
                 	<img src="images/icon-2.png" alt="" class="field-icon">
-                	<input type="password" value="" class="field-form field-password">
+                	<input type="password" placeholder="password" class="field-form field-password">
                 </div>
-                <br>
+                <div class="form-contain">
+                	<img src="images/icon-5.png" alt="" class="field-icon">
+                	<input type="text" placeholder="Mike@gmail.com" class="field-form">
+                </div>
+                <div class="form-contain">
+                	<img src="images/icon-4.png" alt="" class="field-icon">
+                	<input type="password" placeholder="03/06/98" class="field-form">
+                </div>
                 <div class="form-contain center">
                 	<input type="submit" value="Sign-up" class="signup">
                 </div>
