--- a/html/landing.html
+++ b/html/landing.html
@@ -187,7 +187,10 @@
 
 
 <div class="popup-seciton" id="popup-galelry">
-	<div class="popup-title">Choose your Avatar</div>
+	<div class="popup-title">
+    	Choose your Avatar
+        <a href="#" class="login-cancel cancel-logo"><img src="images/close.png" alt=""></a>
+    </div>
     <div class="popup-body">
     	
         <div class="avater-gallery">
