--- a/html/tour-3.html
+++ b/html/tour-3.html
@@ -408,23 +408,21 @@
         </div>
     </div><!--tags-wrap -->
 
-    <div class="content-width">
-        <div class="footer-links">
-            <ul class="clearfix">
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Privacy Agreement</a></li>
-            </ul>
-        </div>
-    </div>
-
-
 
 	<!--footer start -->
     <div id="footer-wrap">
         <div class="content-width">
             <footer id="footer" class="clearfix">
-                <a href="#"><img src="images/footer-logo.png" alt=""></a>
+                <div class="footer-right">
+            		<div class="footer-links">
+                        <ul class="clearfix">
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">Privacy Agreement</a></li>
+                        </ul>
+                    </div>
+            	</div>
+        		<div class="footer-left"><a href="#"><img src="images/footer-logo.png" alt=""></a></div>
             </footer>
         </div>
     </div>
