--- a/html/tour-3.html
+++ b/html/tour-3.html
@@ -51,7 +51,7 @@
         </div>
     </div>
     
-    <a href="#" class="turn your-turn">
+    <a href="index.html" class="turn your-turn">
     	Your Turn!
     </a>
 
