--- a/html/index.html
+++ b/html/index.html
@@ -78,8 +78,7 @@
                 
                 <div class="title-section">
                     <h1>
-                        <span class="block">Search and Chat about Pop Culture and </span>
-                        the latest on Social Media
+                        <span class="block">Search and Chat about Social Media</span>
                     </h1>
                 </div>
                 <div class="search-section">
@@ -391,7 +390,7 @@
 
 <div class="wrapper-bot">
     <div class="tags-wrap">
-        <a href="#" class="more-tag">more tagspots</a>
+        <a href="#" class="more-tag">TAG Ticker</a>
         <!--<a href="#" class="add"><img src="images/add.png" alt=""></a> -->
         <div class="content-width">
             <div class="strip-black">
