--- a/html/something.html
+++ b/html/something.html
@@ -106,42 +106,42 @@
                     		<h2 class="center">#something</h2>
                         </div>
                         <div class="in-sm center">
-                        	<span class="block">Choose a CHANNEL that fits the hashtag. </span>
+                        	<span class="block">AG a CHANNEL that fits the hashtag.</span>
                             Help other TAGEEs find out what you like.
-                        </div>
+                            </div>
                         <div class="article-gallery">
                         	<ul class="clearfix">
                             	<li>
-                                	<img src="images/channel_01.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                	<img src="images/channel_01.png" alt="politics">
+                                    <span class="channel-lable">Relationships</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_02.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                    <span class="channel-lable">Movies</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_03.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                    <span class="channel-lable">Fashion</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_04.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                    <span class="channel-lable">Music</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_05.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                    <span class="channel-lable">Entertainment</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_06.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                    <span class="channel-lable">Gossip</span>
                                 </li>
                                 <li>
                                 	<img src="images/channel_07.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                    <span class="channel-lable">General Discussion</span>
                                 </li>
                                 <li>
-                                	<img src="images/channel_08.png" alt="">
-                                    <span class="channel-lable">#channel</span>
+                                	<img src="images/channel_09.png" alt="">
+                                    <span class="channel-lable">Politics</span>
                                 </li>
                             </ul>
                         </div>
