--- a/html/tour-1.html
+++ b/html/tour-1.html
@@ -46,10 +46,17 @@
     <div class="buble-section">
     	<div class="buble-inner">
             <strong>TAGS</strong>
-            <span>search your </span>
+             <span>All your social media </span>
+            <span> hashtags are right here. </span>
+            <span>Check out the </span>
+             <span>"TAG Ticker" and</span>
+             <span>see trending</span>
+             <span>hashtags in real</span>
+              <span>time.</span>
+ <!--           <span>search your </span>
             <span>favorite hashtag </span>
             <span>and start the </span>
-            <span>converstion</span>
+            <span>converstion</span>-->
         </div>
     </div>
     
