--- a/html/tour-2.html
+++ b/html/tour-2.html
@@ -43,13 +43,20 @@
 <div id="container-fluid">
 
     
-    <div class="buble-section buble-secndary">
+    <div class="buble-section buble-secondary">
     	<div class="buble-inner">
         	<strong>TAGSPOTS</strong>
-            <span>Look the active </span>
+           <span>See something funny,</span>
+           <span>tag the image and join</span>
+           <span>the chat in a TAGSpot.</span>
+           <span>All hashtags and their </span>
+           <span>media from your </span>
+           <span>social networks </span>
+           <span>are here.</span>
+<!--            <span>Look the active </span>
             <span>chatroom about trending</span>
             <span>hashtag they are</span>
-            <span>called Tagspot!</span>
+            <span>called Tagspot!</span>-->
         </div>
     </div>
     
