--- a/html/tour-3.html
+++ b/html/tour-3.html
@@ -45,9 +45,15 @@
     <div class="buble-section buble-tertiary">
     	<div class="buble-inner">
         	<strong>TAGEES</strong>
-            <span>You, your friends</span>
+            <span>Looking for other  </span>
+            <span>social media users with </span>
+            <span>similar interests. Meet  </span>
+            <span>them here and get  </span>
+            <span>tagged in our</span>
+            <span>chatrooms.</span>
+<!--            <span>You, your friends</span>
             <span>and family are</span>
-            <span>all TAGEES.</span>
+            <span>all TAGEES.</span>-->
         </div>
     </div>
     
