update nav and misc

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,7 @@
                     <ul class="clearfix">
                         <li><a href="#">Tour</a></li>
                         <li><a href="#popup-galelry" class="popup-link">Top TagsSpots</a></li>
+                        <li><a href="#">Tagees</a></li>
                         <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
                     </ul>
                 </div>
