--- a/html/landing.html
+++ b/html/landing.html
@@ -59,6 +59,7 @@
                     <ul class="clearfix">
                         <li><a href="#">Tour</a></li>
                         <li><a href="#popup-galelry" class="popup-link">Top TagsSpots</a></li>
+                        <li><a href="#">Tagees</a></li>
                         <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
                     </ul>
                 </div>
@@ -84,7 +85,7 @@
             <span class="block">you laugh, cry and think about what's really </span>
             trending on social media  -->
             
-            <span class="block">Never miss what's poppin' with our hashtag browser. </span>
+            <span class="block">NEVER MISS WHAT'S POPPIN' WITH OUR HASHTAG BROWSER. </span>
             <span class="block">Search every meme and chat to get some R&R </span>
             <span class="block">the Revolution and a little Ratchet </span>        
         </div>
