--- a/html/no-result.html
+++ b/html/no-result.html
@@ -56,9 +56,9 @@
                         <span></span>
                         <span></span>
                     </a>
-                    <ul class="clearfix">
-                        <li><a href="#">Tour</a></li>
+                    <ul class="clearfix">                        <li><a href="#">Tour</a></li>
                         <li><a href="#popup-galelry" class="popup-link">Top TagsSpots</a></li>
+                        <li><a href="#">Tagees</a></li>
                         <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
                     </ul>
                 </div>
