--- a/html/tour-0.html
+++ b/html/tour-0.html
@@ -68,10 +68,10 @@
                 </div>
                 <div id="nav">
                     <ul class="clearfix">
-                        <ul>
-                            <li><a href="#">Tour</a></li>
-                            <li><a href="#popup-galelry" class="popup-link">Top TagsSpots</a></li>
-                            <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
+                        <ul>                        <li><a href="#">Tour</a></li>
+                        <li><a href="#popup-galelry" class="popup-link">Top TagsSpots</a></li>
+                        <li><a href="#">Tagees</a></li>
+                        <li><a href="#popup-login" class="popup-link">Login / Sign-up</a></li>
                         </ul>
                     </ul>
                 </div>
