--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,7 @@
                     </h1>
                 </div>
                 <div class="search-section">
-                    <input type="text" value="# Hashtags" class="field">
+                    <input type="text" value="# Hashtags" class="field" onFocus="if(this.value=='# Hashtags') this.value='';" onBlur="if(this.value=='') this.value='# Hashtags';">
                     <input type="submit" value="" class="submit">
                 </div>
             </div>
